# OTUS-HW-CMD

./: .gitignore  .travis.yml  CMakeLists.txt  cmd.cpp  cmd.h  log_observer.cpp  log_observer.h  main.cpp
include/: cmd.h  log_observer.h
src/: cmd.cpp  log_observer.cpp  main.cpp
test/: CMakeLists.txt  in_test10.txt  in_test11.txt  in_test7.txt  in_test8.txt  in_test9.txt  out_test10.txt  out_test11.txt  out_test7.txt  out_test8.txt  out_test9.txt  testBulk.cpp
